<resources>
    <string name="app_name">Inventory QR Scanner</string>
    <string name="imagedesc">Image Description</string>

    <!--Data String Array-->
    <string-array name="condition">
        <item></item>
        <item>Baik</item>
        <item>Cukup</item>
        <item>Rusak</item>
    </string-array>

    <string-array name="type">
        <item></item>
        <item>Berbahaya</item>
        <item>Tidak Berbahaya</item>
    </string-array>

    <!--String Message-->
    <string name="errorMessageUser">Nama Pengguna tidak boleh kosong !</string>
    <string name="errorMessagePass">Kata Sandi tidak boleh kosong !</string>
    <string name="error">Kolom tidak boleh kosong !</string>
    <string name="errorID">ID sudah terdaftar !</string>
    <string name="errorDate">Format tanggal salah !</string>

    <!--Button Text-->
    <string name="submit">Masuk</string>
    <string name="mahasiswa">Mahasiswa</string>
    <string name="dosen">Dosen</string>
    <string name="scan">Pindai</string>
    <string name="show">Tampilkan lebih banyak</string>
    <string name="save">SIMPAN</string>
    <string name="delete">HAPUS</string>
    <string name="update">SIMPAN PERUBAHAN</string>


    <!--Text View label-->
    <string name="welcome">Selamat Datang !</string>
    <string name="title">Inventaris \nLAB IKM</string>
    <string name="user">Pengguna</string>
    <string name="nothing">Tidak ada data</string>

    <!--Field text-->
    <string name="username">Nama Pengguna</string>
    <string name="password">Kata Sandi</string>
    <string name="hint">Cari Produk</string>

    <!--Field Create Product-->
    <string name="detail">Detail Produk</string>
    <string name="number">ID Produk</string>
    <string name="product">Nama Produk</string>
    <string name="amount">Jumlah</string>
    <string name="date">Tanggal Kadaluwarsa</string>
    <string name="type">Jenis Bahaya</string>
    <string name="location">Tempat Penyimpanan</string>
    <string name="condition">Kondisi</string>
    <string name="show_location">Tempat \nPenyimpanan</string>
    <string name="desc">Deskripsi</string>
    <string name="choose_date">Pilih Tanggal</string>
    <!-- Strings used for fragments for navigation -->

</resources>