<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:id="@id/userInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        app:hintTextColor="@color/teal_700"

        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeWidth="0dp"

        app:startIconDrawable="@drawable/ic_username"
        app:startIconTint="@color/teal_700"
        app:endIconMode="clear_text"

        app:errorEnabled="true"
        app:errorTextColor="@color/white"
        app:errorTextAppearance="@string/errorMessageUser"
        app:errorIconDrawable="@drawable/ic_error"
        app:errorIconTint="@color/light_red"
        app:errorContentDescription="@string/errorMessageUser"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textColorHint="@color/gray"
            android:textSize="14sp"
            android:inputType="text"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeMaxTextSize="16sp"
            android:autoSizeStepGranularity="2sp"
            android:autoSizeTextType="uniform"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:id="@+id/passwordInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/password"
        app:hintTextColor="@color/teal_700"

        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeWidth="0dp"

        app:startIconDrawable="@drawable/ic_lock"
        app:startIconTint="@color/teal_700"
        app:endIconMode="password_toggle"

        app:errorEnabled="true"
        app:errorTextAppearance="@string/errorMessagePass"
        app:errorTextColor="@color/white"
        app:errorIconDrawable="@drawable/ic_error"
        app:errorIconTint="@color/light_red"
        app:errorContentDescription="@string/errorMessagePass"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userInfo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/gray"
            android:outlineProvider="none"
            android:textSize="14sp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeMaxTextSize="16sp"
            android:autoSizeStepGranularity="2sp"
            android:autoSizeTextType="uniform"
            android:inputType="textPassword"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>