<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    tools:context=".activity.HomeActivity">

    <LinearLayout
        android:id="@+id/userInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingVertical="10dp"
        android:paddingHorizontal="50dp"
        android:layout_marginTop="100dp">

        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@drawable/ic_account"
            android:contentDescription="@string/imagedesc" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:text="@string/welcome"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/user"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/search_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userInfo"
        android:layout_gravity="center"
        android:background="@drawable/search_bg"
        android:gravity="center"
        android:layout_marginTop="10dp">

        <EditText
            android:layout_gravity="center"
            android:layout_width="180dp"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:textSize="16sp"
            android:textColor="@color/teal_700"
            android:hint="@string/hint"
            android:inputType="text"
            android:focusedByDefault="false"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ic_search"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/scan"
        android:layout_width="135dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:paddingHorizontal="20dp"
        android:paddingVertical="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/scan"
        android:textSize="16sp"
        android:drawableStart="@drawable/ic_scan"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/teal_700"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_bg"
        app:layout_constraintTop_toBottomOf="@id/search_bar"/>

    <androidx.recyclerview.widget.RecyclerView
        android:background="@drawable/list_bg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scan"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="30dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="20dp"
        tools:listitem="@layout/adapter_item"
        tools:itemCount="3"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add"
        app:tint="@color/white"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/fab_list"
        android:layout_marginBottom="20dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_list"
        app:tint="@color/white"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/fab_add"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="20dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>