<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.WelcomeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/teal_700"
        android:textSize="36sp"
        android:text="@string/title"

        android:layout_marginTop="70dp"
        android:layout_marginStart="50dp"

        app:layout_constraintBottom_toTopOf="@id/userInfo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/userInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:paddingHorizontal="50dp"
        android:paddingTop="100dp"
        android:paddingBottom="80dp"

        android:background="@drawable/login_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mahasiswa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/teal_200"

            android:fontFamily="@font/poppins_bold"
            android:padding="10dp"
            android:text="@string/mahasiswa"
            android:textColor="@color/green"

            android:textSize="18sp"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dosen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/teal_200"

            android:fontFamily="@font/poppins_bold"
            android:padding="10dp"
            android:text="@string/dosen"
            android:textColor="@color/green"

            android:textSize="18sp"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mahasiswa"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>