<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ProductActivity"
    android:background="@color/teal_700">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/create_bg">

        <TextView
            android:id="@+id/product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/teal_700"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Produk" />

        <TextView
            android:id="@+id/label_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/number"
            android:textColor="@color/teal_700"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product"
            android:layout_marginTop="25dp"/>

        <TextView
            android:id="@+id/id"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/label_id"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="000"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_medium"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/label_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/amount"
            android:textColor="@color/teal_700"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product"
            android:layout_marginTop="25dp"/>

        <TextView
            android:id="@+id/amount"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/label_amount"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="000"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_medium"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/label_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/type"
            android:textColor="@color/teal_700"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/amount"
            android:layout_marginTop="25dp"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/label_type"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Type"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_medium"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/label_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/show_location"
            android:textColor="@color/teal_700"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id"
            android:layout_marginTop="25dp"/>

        <TextView
            android:id="@+id/location"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/label_location"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Rak 45"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_medium"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/label_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/date"
            android:textColor="@color/teal_700"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/location"
            android:layout_marginTop="25dp"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/label_date"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_medium"
            android:textSize="16sp"
            tools:text="08/05/2025"/>

        <TextView
            android:id="@+id/label_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/desc"
            android:textColor="@color/teal_700"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date"
            android:layout_marginTop="25dp"/>

        <TextView
            android:background="@drawable/textbox_bg"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/label_desc"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="top"
            android:lines="4"
            android:maxLines="4"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_medium"
            android:textSize="16sp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>